# StackHSE

./: CMakeLists.txt  Makefile  README.md
include/StackArr/: StackArr.hpp
src/: StackArr.cpp  StackArr.tpp
tests/: tests.cpp
